
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.openshift.api.release.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

// JobResults encapsulates the name of the job, all the results of the jobs, and an aggregated
// result of all the jobs
message JobResults {
  // jobName is the name of the job
  optional string name = 1;

  // AggregateState is the overall success/failure of all the executed jobs
  optional string state = 2;

  // JobRunResults contains the links for individual jobs
  repeated JobRunResult results = 3;
}

// JobRunResult the results of a job run
message JobRunResult {
  // State the current state of the job run
  optional string state = 1;

  // URL the html link to the prow results
  optional string url = 2;

  // Retries the number of times the job has been retried
  optional int64 retries = 3;

  // TransitionTime the timestamp of the last result change
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time transitionTime = 4;
}

// PromotionTestResults encapsulates the inputs to produce a new set of promotion tests and
// the status of the promotion tests
//
// Compatibility level 4: No compatibility is provided, the API can change at any point for any reason. These capabilities should not be used by applications needing long term support.
// +openshift:compatibility-gen:level=4
message PromotionTestResults {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Spec the inputs used to create the promotion test
  optional PromotionTestSpec spec = 2;

  // Status is the current status of the promotion test
  optional PromotionTestResultsStatus status = 3;
}

// PromotionTestResultsStatus the status of all the promotion test jobs
message PromotionTestResultsStatus {
  repeated JobResults results = 1;
}

// PromotionTestSpec has the information to represent a PromotionTest
message PromotionTestSpec {
  optional string name = 1;
}

